--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       crossorigin=""
     />
 
-    <title>React App</title>
+    <title>DMI CENTRE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
